# neobft-artifact

./: .gitignore  Cargo.toml  README-aws.md  README.md  build.sh  neo100-prepare.sh  neo100-run.sh  neo4-presets.toml  prepare.md  spec-example.toml  update.sh
assets/: neo-accel.xclbin.tgz.REMOVED.git-id
assets/neo-switch/: Makefile  README.md  monitor.sh  pktgen_fpga.sh  recover_hmac.sh  reset_hmac.sh  reset_hmac_sess.sh  setup_fpga.sh  setup_hmac.sh
assets/neo-switch/bootstrap/: active_hmac.py  bcast_setup.py  clear_states_hmac.py  mcast_setup.py  mirror_setup.py  monitor  port_setup  reroute_hmac.py  session_setup_hmac.py  simulate_rerouting.py
assets/neo-switch/control/: neo_pktgen_fpga.py  neo_pktgen_hmac.py
assets/neo-switch/p4src/fpga/: neo_fpga.p4  neo_fpga_bench.p4
assets/neo-switch/p4src/switch/: constants.p4  copy.p4  forwarding.p4  headers.p4  headers_pipe0.p4  headers_pipe1.p4  (+9 more)
dsys/crates/neo/: Cargo.toml
dsys/crates/neo/src/: client.rs  lib.rs
dsys/scripts/: setup.py  update.py
dsys/src/: app.rs  crypto.rs  node.rs  unreplicated.rs
eval/plot/graphs/: reps-vs-tput.gnuplot
examples/: concurrent-send.rs  multicast-hmac.rs  multicast-pkey.rs  ordered-multicast.rs
neo-switch/: .gitignore  Makefile  README.md  pktgen_hmac.sh  plot_cdf_fpga.py  plot_cdf_hmac.py  plot_tput.py  send_neo.py  send_tom.py
neo-switch/bootstrap/: active_hmac.py  bcast_setup.py  clear_states.py  mcast_setup.py  port_setup
neo-switch/legacy/: compile_fpga.sh  compile_hmac.sh  compile_pkey.sh  compile_pkey_xl.sh  disable_accel.sh  enable_accel.sh  get_accel.sh  plot_cdf.py  plot_cdf2.py
neo-switch/legacy/bootstrap/: accel_disable.py  accel_enable.py  accel_status.py  clear_accel.py  clear_states_xl.py  mcast_setup_xl.py  pd_setup  port_reset  session_setup_pub.py  session_setup_pub_xl.py  tm_setup
neo-switch/legacy/control/: neo_pktgen_fpga.py  neo_pktgen_hmac.py  tom.py
neo-switch/legacy/p4src/: reset_pkey.sh  reset_pkey_xl.sh  setup_pkey.sh  setup_pkey_xl.sh
neo-switch/legacy/test/: mcast_setup.py
neo-switch/p4src/fpga/: tom_fpga.p4
neo-switch/p4src/switch/: constants.p4  copy.p4  forwarding.p4  headers_pipe0.p4  sip00_egress.p4
neo100/: Cargo.toml
neo100-base/: .gitignore  Cargo.toml
neo100-base/scripts/: ec2.py
neo100-base/src/: lib.rs  protocol.rs  simulate.rs  udp.rs
neo100/src/: replica.rs  seq.rs
neo4/: Cargo.toml  README
neo4/src/: common.rs  crypto.rs  hotstuff.rs  lib.rs  meta.rs  transport.rs
neoart/: .gitignore  aggregate_throughput.py
neoart/eval/: perf.txt  scale.txt  tput.txt
neoart/src/: minbft.rs  neo.rs  pbft.rs  unreplicated.rs  ycsb.rs  zyzzyva.rs
neoart/src-sw/: common.p4  neo_r.p4  neo_s.p4
notebooks/: .gitignore  figues.ipynb
sample-data/: saved-aws.csv  saved-fpga.csv  saved-hmac.csv
scripts/: .terraform.lock.hcl  addresses.txt.tftpl  neo100-run.py  neo100-update.py  neo100.tf
scripts/aws/: main.tf
scripts/control/: Cargo.toml
scripts/control-messages/: Cargo.toml
scripts/control-messages/src/: lib.rs
scripts/control/src/: main.rs
scripts/neo-aws/: .terraform.lock.hcl  Cargo.toml  main.tf
scripts/neo-aws-prepare/: Cargo.toml
scripts/neo-aws-prepare/src/: main.rs
scripts/neo-aws/src/: lib.rs  main.rs
scripts/neo-sequencer/: Cargo.toml
scripts/relay/: Cargo.toml
scripts/relay/src/: main.rs
scripts/reload/: Cargo.toml
scripts/reload/src/: main.rs
scripts/update/: Cargo.toml
scripts/update/src/: main.rs
src/: app.rs  client.rs  common.rs  context.rs  hotstuff.rs  lib.rs  main.rs  minbft.rs  neo.rs  pbft.rs  unreplicated.rs  zyzzyva.rs
src/app/: ycsb.rs
src/context/: crypto.rs  ordered_multicast.rs  switch_signing_key  switch_verifying_key  tokio.rs
(+28 files in other folders)
