[package]
name = "replicated"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".", 
    "scripts/update", 
    "scripts/control-messages",
    "scripts/control",
]

[dependencies]
axum = "0.6.20"
bincode = "1.3.3"
control-messages = { version = "0.1.0", path = "scripts/control-messages" }
flume = "0.11.0"
nix = { version = "0.27.1", features = ["sched"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["net", "rt", "signal", "time"] }
tokio-util = "0.7.9"
