[package]
name = "dsys"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[profile.release]
panic = 'abort'

[dependencies]
bincode = "1.3.3"
crossbeam = "0.8.2"
nix = "0.26.2"
rand = "0.8.5"
secp256k1 = { version = "0.26.0", features = ["bitcoin-hashes"] }
serde = { version = "1.0.152", features = ["derive"] }
