[package]
name = "neoart"
version = "0.1.0"
edition = "2021"

[profile.release]
# lto = true

[dependencies]
async-trait = "0.1.56"
bincode = "1.3.3"
nix = "0.24.2"
rand = "0.8.5"
rayon = "1.5.3"
secp256k1 = { version = "0.24.0", features = ["serde", "bitcoin_hashes"] }
serde = { version = "1.0.140", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full", "test-util"] }
toml = "0.5.9"
