[package]
name = "control"
version = "0.1.0"
edition = "2021"

[features]
aws = []

[dependencies]
control-messages = { version = "0.1.0", path = "../control-messages" }
reqwest = { version = "0.11.22", default-features = false, features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["rt", "net", "time", "macros"] }
tokio-util = "0.7.9"
